@@ -12,6 +12,7 @@
 * Added Traditional Chinese support [Thanks to ayamomiji]
 * Include padrino-cache gem as part of standard install
 * Added Rake Task for Mongoid
+* Ensure project name are valid
 
 == 0.9.20
 
